--- a/Symfony/src/CoreBundle/Resources/views/Connexion/index.html.twig
+++ b/Symfony/src/CoreBundle/Resources/views/Connexion/index.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bienvenue sur ma première page avec OpenClassrooms !</title>
+    <title>Love Letter</title>
   </head>
   <body>
     <h1>Hello World !</h1>
