Ajout controleur Partie

--- a/Symfony/src/CoreBundle/Resources/views/Partie/partie.html.twig
+++ b/Symfony/src/CoreBundle/Resources/views/Partie/partie.html.twig
@@ -9,9 +9,6 @@
         <title>Love Letter</title>
     </head>
     <body>
-        <h1>Inscription</h1>
-        <div class="well">
-            {{ form(form) }}
-        </div>
+        <h1>Gestionnaire de Partie</h1>
     </body>
 </html>
