--- a/Symfony/src/CoreBundle/Resources/views/Connexion/connexion.html.twig
+++ b/Symfony/src/CoreBundle/Resources/views/Connexion/connexion.html.twig
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <title>Love Letter</title>
     </head>
@@ -13,7 +13,7 @@
         {% if error %}
             <div class="alert alert-danger">{{ error.message }}</div>
         {% endif %}
-        
+
         <form action="{{ path('login_check') }}" method="post">
             <label for="username">Login :</label>
             <input type="text" id="username" name="_username" value="{{ last_username }}" />
