--- a/Symfony/src/CoreBundle/Resources/views/layout.html.twig
+++ b/Symfony/src/CoreBundle/Resources/views/layout.html.twig
@@ -9,7 +9,9 @@
         {% endfor %}
     {% endfor %}
 
-    {% block fos_user_content %}
-    {% endblock fos_user_content %}
+    <div class="container">
+        {% block fos_user_content %}
+        {% endblock fos_user_content %}
+    </div>
 {% endblock %}
 
