--- a/Symfony/src/CoreBundle/Resources/views/Partie/gestionPartie.html.twig
+++ b/Symfony/src/CoreBundle/Resources/views/Partie/gestionPartie.html.twig
@@ -1,39 +1,20 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="{{ asset('bundles/core/css/partie.css') }}" type="text/css" />
-        <title>Love Letter</title>
-    </head>
-    <body>
-        <h1>Gestionnaire de Partie</h1>
-        <h3>Rejoindre une Partie</h3>
-        <ul>
-            {% for partie in tab %}
-                <li><button id="partie" onclick="location.href = '{{ app.request.uri }}partie/{{ partie.idpartie }}';">Partie {{ partie.idpartie }}</button></li>
-                <br>
-            {% endfor %}
+{% extends "CoreBundle:Partie:layoutPartie.html.twig" %}
+
+{% block body %}
+    <h3>Rejoindre une Partie</h3>
+    <ul>
+        {% for partie in tab %}
+            <li><button class="btn btn-default" onclick="location.href = '{{ app.request.uri }}partie/{{ partie.idpartie }}';">Partie {{ partie.idpartie }}</button></li>
+            <br>
+        {% endfor %}
+    </ul>
+    <h3>Créer une Partie</h3>
+    <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Nombre de joueurs
+            <span class="caret"></span></button>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+            <li role="presentation"><a role="menuitem" href="#">2 joueurs</a></li>
         </ul>
-        <h3>Créer une Partie</h3>
-        <ul id="menu-accordeon">
-            <li><a href="#">Nombre de joueurs</a>
-                <ul>
-                    <li><a href="#">2 joueurs</a></li>
-                </ul>
-            </li>
-        </ul>
-        <footer>
-            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                Connecté en tant que {{ app.user.username }}
-                -
-                <a href="{{ path('fos_user_security_logout') }}">Déconnexion</a>
-            {% else %}
-                <a href="{{ path('fos_user_security_login') }}">Connexion</a>
-            {% endif %}
-        </footer>
-    </body>
-</html>
+    </div>
+</div>
+{% endblock %}
