--- a/Symfony/src/CoreBundle/Resources/views/Partie/layoutPartie.html.twig
+++ b/Symfony/src/CoreBundle/Resources/views/Partie/layoutPartie.html.twig
@@ -10,31 +10,25 @@
             <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         {% endblock %}
     </head>
-
     <body>
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="{{ path('fos_user_security_logout') }}">LoveLetter</a>
+                    <a class="navbar-brand">LoveLetter</a>
                 </div>
                 <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Partie</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{{ path('fos_user_registration_register') }}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a><span class="glyphicon glyphicon-user"></span> {{ app.user.username }}</a></li>
+                    <li><a href="{{ path('fos_user_security_logout') }}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                 </ul>
             </div>
         </nav>
-        <div class="container">
-            <div id="header" class="jumbotron">
-                <h1>Bienvenue sur Love Letter !</h1>
-                <p>
-                    Jeu de cartes à plusieurs
-                </p>
-            </div>
-            <div id="content" class="col-md-9">
-                {% block body %}
-                {% endblock %}
-            </div>
+
+        <div id="content" class="col-md-9">
+            {% block body %}
+            {% endblock %}
         </div>
 
         {% block javascripts %}
