--- a/Symfony/src/CoreBundle/Resources/views/Partie/gestionPartie.html.twig
+++ b/Symfony/src/CoreBundle/Resources/views/Partie/gestionPartie.html.twig
@@ -13,7 +13,7 @@
         <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Nombre de joueurs
             <span class="caret"></span></button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-            <li role="presentation"><a role="menuitem" href="#">2 joueurs</a></li>
+            <li role="presentation"><a role="menuitem" href="{{ app.request.uri }}addPartie/2">2 joueurs</a></li>
         </ul>
     </div>
 </div>
