--- a/Symfony/src/CoreBundle/Resources/views/Partie/partiePerso.html.twig
+++ b/Symfony/src/CoreBundle/Resources/views/Partie/partiePerso.html.twig
@@ -8,10 +8,10 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="{{ app.request.getBaseURL() }}">Partie</a></li>
-                <li class="active"><a href="#">Partie {{ num }}</a></li>
+                <li class="active"><a href="#">Mon espace</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{ app.request.getBaseURL() }}/{{ id.id }}"><span class="glyphicon glyphicon-user"></span> {{ app.user.username }}</a></li>
+                <li><a><span class="glyphicon glyphicon-user"></span> {{ app.user.username }}</a></li>
                 <li><a href="{{ path('fos_user_security_logout') }}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
             </ul>
         </div>
@@ -19,11 +19,12 @@
 {% endblock %}    
 
 {% block body %}
-    <h1>Partie n°{{ num }}</h1>
-    {% if o == false %}
-        <p>La partie va commencer !</p>
-    {%else%}
-        <p>Il n'y a pas assez de joueur pour commencer la partie : Revenez plus tard !</p>
-    {%endif%}
+    <h1>Mes Parties</h1>
+    <ul>
+        {% for partie in tab %}
+            <li><button class="btn btn-default" onclick="location.href = '{{ app.request.getBaseURL() }}/partie/{{ partie.idpartie }}';">Partie {{ partie.idpartie }}</button></li>
+            <br>
+        {% endfor %}
+    </ul>
 {% endblock %}
 
