--- a/Symfony/src/CoreBundle/Resources/views/Partie/layoutPartie.html.twig
+++ b/Symfony/src/CoreBundle/Resources/views/Partie/layoutPartie.html.twig
@@ -18,7 +18,7 @@
                         <a class="navbar-brand">LoveLetter</a>
                     </div>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Partie</a></li>
+                        <li class="active"><a href="#">Home</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a><span class="glyphicon glyphicon-user"></span> {{ app.user.username }}</a></li>
