--- a/Symfony/src/CoreBundle/Resources/views/Partie/gestionPartie.html.twig
+++ b/Symfony/src/CoreBundle/Resources/views/Partie/gestionPartie.html.twig
@@ -7,7 +7,7 @@
                 <a class="navbar-brand">LoveLetter</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Partie</a></li>
+                <li class="active"><a href="#">Home</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ app.request.uri }}{{ id }}"><span class="glyphicon glyphicon-user"></span> {{ app.user.username }}</a></li>
