--- a/Symfony/src/CoreBundle/Resources/views/Partie/partie.html.twig
+++ b/Symfony/src/CoreBundle/Resources/views/Partie/partie.html.twig
@@ -7,7 +7,7 @@
                 <a class="navbar-brand">LoveLetter</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="{{ app.request.getBaseURL() }}">Partie</a></li>
+                <li><a href="{{ app.request.getBaseURL() }}">Home</a></li>
                 <li class="active"><a href="#">Partie {{ num }}</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
