--- a/Symfony/app/Resources/views/layout.html.twig
+++ b/Symfony/app/Resources/views/layout.html.twig
@@ -24,7 +24,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="container">
+        <div class="container-fluid">
             <div id="header" class="jumbotron">
                 <h1>Bienvenue sur Love Letter !</h1>
                 <p>
